# cxx-auto-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/commands/: EmitUmbrella.cmake
cmake/components/: CMakeLists.txt
cmake/config/: Config.cmake.in
cmake/modules/: FindClang.cmake  FindClangCC.cmake  FindClangCXX.cmake  FindClangD.cmake  FindClangFormat.cmake  FindClangTidy.cmake  FindCodeChecker.cmake  FindHomebrew.cmake  FindIncludeWhatYouUse.cmake  FindLLVM.cmake  FindLLVMConfig.cmake  FindPython3.cmake  FindRunClangFormat.cmake  FindRunClangTidy.cmake  FindRustC.cmake  FindRustup.cmake  FindSccache.cmake  FindScoop.cmake  FindSwift.cmake  FindValgrind.cmake
cmake/modules/Clang/: Support.cmake
cmake/modules/CxxAutoCMake/: Settings.cmake  Support.cmake
cmake/modules/LLVM/: Support.cmake
cmake/modules/Rustup/: Support.cmake
